--- a/include/geos/platform.h.in
+++ b/include/geos/platform.h.in
@@ -94,12 +94,11 @@ extern "C"
 // sandro furieri: sanitizing MinGW32
 #  define ISNAN(x) (std::isnan(x))
 # elif defined(__OSX__) || defined(__APPLE__) || \
-       defined(__NetBSD__) || defined(__DragonFly__) || defined (__OpenBSD__) || \
-       (defined(__sun) && defined(__GNUC__))
+       defined(__NetBSD__) || defined(__DragonFly__) || defined (__OpenBSD__) 
    // Hack for OS/X <cmath> incorrectly re-defining isnan() into oblivion.
    // It does leave a version in std.
 #  define ISNAN(x) (std::isnan(x))
-# elif (defined(__sun) || defined(__sun__)) && defined(__SUNPRO_CC)
+# elif (defined(__sun) || defined(__sun__))
 #  include <math.h>
 #  define ISNAN(x) (::isnan(x))
 # endif
