--- a/Makefile.am
+++ b/Makefile.am
@@ -27,8 +27,10 @@ BUILT_SOURCES = geos_svn_revision.h
 
 EXTRA_DIST = acsite.m4 makefile.vc nmake.opt autogen.bat CMakeLists.txt \
   cmake/modules/CheckPrototypeExists.cmake \
+  cmake/modules/GenerateSourceGroups.cmake \
   cmake/modules/COPYING-CMAKE-SCRIPTS \
   cmake/cmake_uninstall.cmake.in geos_svn_revision.h
+
 
 ACLOCAL_AMFLAGS = -I macros
 
