--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -2025,7 +2025,7 @@ MACRO_EXPANSION        = YES
 # The default value is: NO.
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
-EXPAND_ONLY_PREDEF     = NO
+EXPAND_ONLY_PREDEF     = YES
 
 # If the SEARCH_INCLUDES tag is set to YES, the include files in the
 # INCLUDE_PATH will be searched if a #include is found.
@@ -2057,7 +2057,21 @@ INCLUDE_FILE_PATTERNS  =
 # recursively expanded use the := operator instead of the = operator.
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
-PREDEFINED             = GEOS_DLL
+PREDEFINED             = GEOS_DLL \
+                         GEOS_DEPRECATED \
+                         GEOS_DEPRECATED_VARIABLE \
+                         GEOS_DEPRECATED_VERSION_2_0 \
+                         GEOS_DEPRECATED_VERSION_3_0 \
+                         GEOS_DEPRECATED_VERSION_3_1 \
+                         GEOS_DEPRECATED_VERSION_3_2 \
+                         GEOS_DEPRECATED_VERSION_3_3 \
+                         GEOS_DEPRECATED_VERSION_3_4 \
+                         GEOS_DEPRECATED_VERSION_3_5 \
+                         GEOS_DEPRECATED_VERSION_3_6 \
+                         GEOS_DEPRECATED_VERSION_3_7 \
+                         GEOS_DEPRECATED_VERSION_3_8 \
+                         GEOS_DEPRECATED_SINCE \
+                         _DOXYGEN_
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then this
 # tag can be used to specify a list of macro names that should be expanded. The
@@ -2066,7 +2080,7 @@ PREDEFINED             = GEOS_DLL
 # definition found in the source code.
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
-EXPAND_AS_DEFINED      =
+EXPAND_AS_DEFINED      = GEOS_DEPRECATED_SINCE
 
 # If the SKIP_FUNCTION_MACROS tag is set to YES then doxygen's preprocessor will
 # remove all references to function-like macros that are alone on a line, have
