--- a/tests/xmltester/CMakeLists.txt
+++ b/tests/xmltester/CMakeLists.txt
@@ -28,7 +28,7 @@ foreach(_testdir general issue misc robust validate)
     file(GLOB_RECURSE _testfiles ${CMAKE_CURRENT_LIST_DIR}/tests/${_testdir}/*.xml CONFIGURE_DEPEND)
     foreach(_testfile ${_testfiles})
         get_filename_component(_testname ${_testfile} NAME_WE)
-        add_test(NAME ${_testdir}-${_testname} COMMAND test_xmltester --test-valid-output ${_testfile})
+        add_test(NAME ${_testdir}-${_testname} COMMAND test_xmltester -v --test-valid-output ${_testfile})
     endforeach()
 endforeach()
 unset(_testdir)
