Use spatial index to check shell nesting in IsValidOp
This commit introduces a IndexedNestedShellTester class, modelled after
IndexedNestedRingTester, to check shell nesting as part of MultiPolygon
validity checking. Indexes are used both to locate rings relative to
each other (STRtree) and to check point containment within a ring
(IndexedPointOnAreaLocator).

This commit reduces GEOSisValid runtime for a test geometry (GADM
boundary of Australia) from about 85 seconds to less than 1 second. It
does not appreciably change runtime for TIGER counties, HydroBASINS
Level 5, or a sample parcel dataset.

--- a/src/operation/valid/Makefile.am
+++ b/src/operation/valid/Makefile.am
@@ -23,6 +23,7 @@ libopvalid_la_SOURCES = \
     TopologyValidationError.cpp \
     IndexedNestedRingTester.cpp \
     IndexedNestedRingTester.h \
+    IndexedNestedShellTester.cpp \
     MakeValid.cpp
 
 libopvalid_la_LIBADD =
