--- a/.travis.yml
+++ b/.travis.yml
@@ -103,17 +103,17 @@ matrix:
       env:
         - E="TOOL=cmake && BUILD_TYPE=Release && CXX=clang++ && ARCH=-m64 && CC=clang"
 
-    - os: linux
-      cache:
-        apt: true
-        directories:
-          - $HOME/.ccache
-      addons:
-        apt:
-          sources: *sources
-          packages: ['clang','ccache','doxygen']
-      env:
-        - E="TOOL=autotools_scanbuild && BUILD_TYPE=Release && ARCH=-m64
+#    - os: linux
+#      cache:
+#        apt: true
+#        directories:
+#          - $HOME/.ccache
+#      addons:
+#        apt:
+#          sources: *sources
+#          packages: ['clang','ccache','doxygen']
+#      env:
+#        - E="TOOL=autotools_scanbuild && BUILD_TYPE=Release && ARCH=-m64
 
 before_install:
   - eval "${E}"
