--- a/.travis.yml
+++ b/.travis.yml
@@ -110,8 +110,11 @@ matrix:
           - $HOME/.ccache
       addons:
         apt:
-          sources: *sources
-          packages: ['clang','ccache','doxygen']
+          sources:
+            - ubuntu-toolchain-r-test
+            - sourceline: 'deb https://apt.llvm.org/xenial/ llvm-toolchain-xenial-9 main'
+              key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
+          packages: ['clang-9', 'clang-tools-9', 'ccache','doxygen']
       env:
         - E="TOOL=autotools_scanbuild && BUILD_TYPE=Release && ARCH=-m64"
 
