--- a/tests/xmltester/Makefile.am
+++ b/tests/xmltester/Makefile.am
@@ -109,6 +109,7 @@ SAFE_XMLTESTS= \
 	$(srcdir)/tests/issue/issue-geos-838.xml \
 	$(srcdir)/tests/issue/issue-geos-990.xml \
 	$(srcdir)/tests/issue/issue-geos-994.xml \
+	$(srcdir)/tests/issue/issue-geos-1018.xml \
 	$(srcdir)/tests/validate/TestRelateAA-big.xml \
 	$(srcdir)/tests/validate/TestRelateAA.xml \
 	$(srcdir)/tests/validate/TestRelateAC.xml \
